# tigercapture

./: .gitignore  .travis.yml  CMakeLists.txt  PKGBUILD  README.md
data/: tigercapture.desktop
src/: Clipboard.cpp  Clipboard.h  Config.cpp  Config.h  FileUtils.h  IpcClient.cpp  IpcClient.h  IpcServer.cpp  IpcServer.h  MainWindow.cpp  MainWindow.h  OutputSource.h  Screenshot.cpp  Screenshot.h  Singleton.cpp  Singleton.h  TigerCapture.cpp  TigerCapture.h  TigerCapture.hpp  Uploader.cpp  Uploader.h  Utils.h  clipboard.cpp  clipboard.h  json.hpp  main.cpp
src/region/: AreaScreenshotGrabber.cpp  AreaScreenshotGrabber.h  PinnedArea.cpp  PinnedArea.h  PinnedAreaGrabber.cpp  PinnedAreaGrabber.h  RectangleGrabber.cpp  RectangleGrabber.h  RegionGrabber.cpp  RegionGrabber.h
src/widgets/: ConfigWidget.cpp  ConfigWidget.h  DragUploadWidget.cpp  DragUploadWidget.h  MainWindow.cpp  MainWindow.h  PinnedArea.cpp  PinnedArea.h  PinnedAreaWindow.cpp  PinnedAreaWindow.h  SystemTray.cpp  SystemTray.h  UploadedFileWidget.cpp  UploadedFileWidget.h  UploadsExplorerWidget.cpp  UploadsExplorerWidget.h
src/widgets/gui/: ConfigWidget.cpp  ConfigWidget.h  MainWindow.cpp  MainWindow.h  UploadedFileWidget.cpp  UploadedFileWidget.h  UploadsExplorerWidget.cpp  UploadsExplorerWidget.h
